# isai

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: basic.py
src/isai/: __init__.py  client.py  exceptions.py  images.py  models.py
tests/: test_client.py
