[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isai"
version = "0.1.0"
description = "Лёгкий клиент для OpenAI-совместимого LLM API (/chat/completions). Обрабатывает входящие данные и возвращает ответ модели."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "xuxubla", email = "dev.xux@gmail.com" }]
keywords = ["llm", "openai", "chat", "completions", "api", "client", "ishosting"]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/xuxubla/isai"
Repository = "https://github.com/xuxubla/isai"

[tool.hatch.build.targets.wheel]
packages = ["src/isai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
